Implemented #346 about manually connecting slurs across system breaks. Added the ability to set/unset the 'tie' aspect of a slur in InterBoard.